; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_machine.c_processor_up.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_machine.c_processor_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32 }

@PROCESSOR_RUNNING = common dso_local global i32 0, align 4
@processor_avail_count = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @processor_up(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %5 = call i32 (...) @splsched()
  store i32 %5, i32* %4, align 4
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %7 = call i32 @init_ast_check(%struct.TYPE_9__* %6)
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 1
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  store %struct.TYPE_10__* %10, %struct.TYPE_10__** %3, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %12 = call i32 @pset_lock(%struct.TYPE_10__* %11)
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %14, align 4
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %19 = load i32, i32* @PROCESSOR_RUNNING, align 4
  %20 = call i32 @pset_update_processor_state(%struct.TYPE_10__* %17, %struct.TYPE_9__* %18, i32 %19)
  %21 = call i32 @hw_atomic_add(i32* @processor_avail_count, i32 1)
  %22 = call i32 (...) @commpage_update_active_cpus()
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = call i32 @pset_unlock(%struct.TYPE_10__* %23)
  %25 = call i32 (...) @ml_cpu_up()
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @splx(i32 %26)
  ret void
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @init_ast_check(%struct.TYPE_9__*) #1

declare dso_local i32 @pset_lock(%struct.TYPE_10__*) #1

declare dso_local i32 @pset_update_processor_state(%struct.TYPE_10__*, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @hw_atomic_add(i32*, i32) #1

declare dso_local i32 @commpage_update_active_cpus(...) #1

declare dso_local i32 @pset_unlock(%struct.TYPE_10__*) #1

declare dso_local i32 @ml_cpu_up(...) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
